fixed top-row causing horizontal scroll

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,6 +10,8 @@ h3,legend {
 }
 
 #top-row {
+  margin-left: 0;
+  margin-right: 0;
   color: #f7fff7;
   background-color: #3A3A3A;
 }
